chore: CodeRabbitの設定を更新 - developブランチのレビューを有効化

--- a/.github/coderabbit.yaml
+++ b/.github/coderabbit.yaml
@@ -20,6 +20,11 @@ chat:
 
 # レビュー対象
 review:
+  # ベースブランチの設定
+  base_branches:
+    - "main"
+    - "develop"
+    
   files_to_review:                # レビュー対象ファイル
     - "src/**/*.js"              # JavaScriptファイル
     - "src/**/*.css"             # CSSファイル
