--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,12 @@ Thumbs.db
 .env.local
 .env.*.local
 
+# GitHub tokens and credentials
+.github-token
+.gh-token
+*.token
+gh_config.yml
+
 # Chrome extension development
 *.pem
 *.crx
