--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,12 @@
       "js": ["src/content/content.js"],
       "css": ["styles/content.css"],
       "run_at": "document_idle"
+    },
+    {
+      "matches": ["https://notebooklm.google.com/*", "https://notebooklm.google/*"],
+      "js": ["src/content/notebook-iframe.js"],
+      "all_frames": true,
+      "run_at": "document_idle"
     }
   ],
   "side_panel": {
